# auxeticgrowthprocess2d

./: README.md
code/: CMakeLists.txt  all.sh  connectivity.h  explore.py  explore_analysis.py  explore_analysis_plots.py  growth.h  homogenize_2d.m  homogenize_2d_image.m  main.cpp  optimize.py  parameters.h  plot_closeup_no_video.py  plots.h  point_process.h  regularization.h  single.py  single_analysis.py  starshaped.h  timings.py  timings_analysis.py  timings_analysis_plots.py  utils.py  vec2.h
code/parameters/: explore_variable_random.txt  explore_variable_rsa.txt  figure_example_stochastic_homogenization.txt  figure_function_interpolation.txt  figure_function_interpolation_3fold.txt  figure_function_interpolation_4axis.txt  figure_function_interpolation_only_points.txt  figure_overview.txt  figure_overview_constant.txt  figure_overview_euclidean.txt  figure_problem_connectivity.txt  global.txt  global_explore.txt  global_explore_optimize.txt  global_optimize.txt  global_single.txt  global_single_optimize.txt  global_timings.txt  optimize_fixed_random.txt  optimize_fixed_rsa.txt  optimize_variable_max_length_growth_first_random.txt  optimize_variable_max_length_growth_first_rsa.txt  optimize_variable_max_length_growth_second_random.txt  optimize_variable_max_length_growth_second_rsa.txt
